Fixed new call method bugs & language layout bugs

--- a/app/client/stylus/main.styl
+++ b/app/client/stylus/main.styl
@@ -6,6 +6,7 @@ body
   no-around()
   width 100%
   height 100%
+  overflow-x hidden
 
 @viewport
   zoom 1.0
